[package]
name = "usec"
version = "0.2.2"
edition = "2021"
keywords = ["calendar", "financial", "stock-exchange"]
license = "MIT"
description = """
A Rust module with the ability of calculating US stock exchange calendar with full and half-day holidays
"""
repository = "https://github.com/midnightcodr/usec"
documentation = "https://docs.rs/usec/latest/usec/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.19", features = ["serde"]}
computus = "1.0.0"
serde = { version = "1.0.136", features = ["derive"]  }
serde_json = "1.0.79"

[[example]]
name="show_year"
path="examples/show_year.rs"
